# c-harmony

./: Dockerfile  Makefile  Pipfile  README.md  pyproject.toml
src/harmony/: file.txt  instrumentation.py  orchestrate.py
src/harmony/CR7_refdata7/: EXP21002563_Sample_01__TCR_clonotypes.csv  EXP21002563_Sample_01__TCR_filtered_contig_annotations.csv  EXP21002563_Sample_02__TCR_clonotypes.csv  EXP21002563_Sample_02__TCR_filtered_contig_annotations.csv  EXP21002563_Sample_03__TCR_clonotypes.csv  EXP21002563_Sample_03__TCR_filtered_contig_annotations.csv  EXP21002563_Sample_04__TCR_clonotypes.csv  EXP21002563_Sample_04__TCR_filtered_contig_annotations.csv  EXP21002563_Sample_05__TCR_clonotypes.csv  EXP21002563_Sample_05__TCR_filtered_contig_annotations.csv  EXP21002563_Sample_06__TCR_clonotypes.csv  EXP21002563_Sample_07__TCR_clonotypes.csv  EXP21002563_Sample_07__TCR_filtered_contig_annotations.csv  EXP21002563_Sample_08__TCR_clonotypes.csv  EXP21002563_Sample_08__TCR_filtered_contig_annotations.csv
src/harmony/experiments-v0.40/: EXP21002563_Sample_01__TCR_clonotypes.csv  EXP21002563_Sample_02__TCR_clonotypes.csv  EXP21002563_Sample_03__TCR_clonotypes.csv  EXP21002563_Sample_04__TCR_clonotypes.csv  EXP21002563_Sample_05__TCR_clonotypes.csv  EXP21002563_Sample_06__TCR_clonotypes.csv  EXP21002563_Sample_07__TCR_clonotypes.csv  EXP21002563_Sample_07__TCR_filtered_contig_annotations.csv  EXP21002563_Sample_08__TCR_clonotypes.csv  EXP21002563_Sample_08__TCR_filtered_contig_annotations.csv
src/harmony/metadata/: EXP21002563_samples.csv
src/harmony/toolbox/: aggregate.py  (+4 more)
templates/: compose.yaml.ac
ui/: Dockerfile.bkup.1  EXP21001952_sample_status.json  EXP21002563_sample_status.json  EXP21002563_sample_status.txt  Makefile.bkup.1  Pipfile  Pipfile.bkup.1  pyproject.toml
ui/src/: eln_tools.py  s3_utils,p.py
ui/src/harmony_ui/: Welcome.py  Welcome.py.bkup.1  instrumentation.py
ui/src/harmony_ui/pages/: 1_📈_Summary.py  2_✅_Harmony.py
ui/src/harmony_ui/toolkit/: constants.py  help.py  query.py  utils.py
ui/templates/: compose.yaml.ac
ui/tmp/: EXP21001952_Sample_01_top20_clonotype_frequency.csv  EXP21001952_Sample_02_top20_clonotype_frequency.csv  EXP21001952_Sample_03_top20_clonotype_frequency.csv  EXP21001952_Sample_05_top20_clonotype_frequency.csv  EXP21001952_datatypes.csv  EXP21001952_gex_umi_rvalue.json  EXP21001952_tcr_barcode_umi_rvalue.json  EXP21001952_tcr_clonotype_rvalue.json  EXP21001952_tcrid_jaccard_similarity.json  EXP21002563_Sample_01_clonotypes_union.csv  EXP21002563_Sample_02_clonotypes_union.csv  EXP21002563_Sample_02_top20_clonotype_frequency.csv  EXP21002563_Sample_03_top20_clonotype_frequency.csv  EXP21002563_Sample_04_clonotypes_union.csv  EXP21002563_Sample_04_top20_clonotype_frequency.csv  EXP21002563_Sample_05_top20_clonotype_frequency.csv  EXP21002563_Sample_06_clonotypes_union.csv  EXP21002563_Sample_06_top20_clonotype_frequency.csv  EXP21002563_Sample_07_clonotypes_union.csv  EXP21002563_Sample_07_top20_clonotype_frequency.csv  EXP21002563_datatypes.csv  EXP21002563_gex_umi_rvalue.json  EXP21002563_tcr_barcode_umi_rvalue.json  EXP21002563_tcr_clonotype_rvalue.json  EXP21002563_tcrid_jaccard_similarity.json  experiments-metadata.csv
(+52 files in other folders)
